# wallpaperd

./: .gitignore  CMakeLists.txt  ChangeLog  LICENSE  Makefile.am  README  README.md  autogen.sh  config.h.in  configure.ac  wallpaperd.cfg
.github/workflows/: cmake.yml
CMake/Modules/: FindImlib2.cmake
src/: CMakeLists.txt  Makefile.am  background.c  background.h  background_xml.c  background_xml.h  cache.c  cache.h  cfg.c  cfg.h  compat.c  compat.h  main.c  render.c  render.h  util.c  util.h  wallpaper.c  wallpaper.h  wallpaper_match.c  wallpaper_match.h  wallpaperd.c  wallpaperd.h  x11.c  x11.h
